; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/alpha/extr_hpeldsp_alpha.c_avg2.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/alpha/extr_hpeldsp_alpha.c_avg2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @avg2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @avg2(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* %4, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* %4, align 4
  %10 = xor i32 %8, %9
  %11 = call i32 @BYTE_VEC(i32 254)
  %12 = and i32 %10, %11
  %13 = ashr i32 %12, 1
  %14 = sub nsw i32 %7, %13
  ret i32 %14
}

declare dso_local i32 @BYTE_VEC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
